--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ $(document).ready(function() {
     width: 100%;
   }
   #main-menu {
+    margin-top: -5px;
+    margin-left: -5px;
     width: 100%;
     height: 100%;
     position: absolute;
