--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@ $(document).ready(function() {
     height: 100%;
     width: 100%;
     overflow-y: hidden;
+    overflow=x: hidden;
   }
   #web-page {
     height: 200%;
     width: 100%;
   }
   #main-menu {
-    margin-top: -8px;
+    margin-top: -8.5px;
     margin-left: -8px;
     width: 100%;
     height: 100%;
