--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ $(document).ready(function() {
     height: 100%;
     width: 100%;
     overflow-y: hidden;
-    overflow=x: hidden;
+    overflow-x: hidden;
   }
   #web-page {
     height: 200%;
