--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@ $(document).ready(function() {
       <div class="input-field" style="background-color: rgb(255,221,0);" id="file-entry">
         <div class="input-field-title">
           <strong>File Entry: </strong></div>
-          <input type="text" class="text-field" placeholder="Enter a number you want to encrypt here." style="width: 42.5">
-          <input type="text" class="tet-field" placeholder="Enter encryption key here." style="width: 42.5%">
+          <input type="text" class="text-field" placeholder="Enter a number you want to encrypt here." style="width: 42.5%">
+          <input type="text" class="text-field" placeholder="Enter encryption key here." style="width: 42.5%">
         <div class="java-call-button"><a href="#" class="java-call">Decrypt!</a>
         </div>
       </div>
